--- a/segunda.html
+++ b/segunda.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>WHERE?</h1>
         <img src="Captura de tela 2024-08-27 201413.png" class="imagem-centralizada">
+        <h3>veja o padrão: A1234</h3>
         <h3>1990</h3>
         <input type="text" placeholder="Insira o texto aqui..." class="input-text" id="input-text">
         <button class="submit-btn" onclick="checkInput()">Enviar</button>
